--- a/GolfingStats/GolfingStats/Pages/ShotPages/DriveDetailsPage.xaml
+++ b/GolfingStats/GolfingStats/Pages/ShotPages/DriveDetailsPage.xaml
@@ -3,6 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:control="clr-namespace:GolfingStats.Controls"
              x:Class="GolfingStats.Pages.ShotPages.DriveDetailsPage">
+
+    <!--<ContentPage.Padding>
+        <OnPlatform x:TypeArguments="Thickness">
+            <On Platform="iOS">0,20,0,0</On>
+        </OnPlatform>
+    </ContentPage.Padding>-->
+
     <ContentPage.Content>
         <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
             <control:ShotModalNavBar Title="{Binding ShotNumber}"  />
