--- a/GolfingStats/GolfingStats/Pages/HomePage.xaml
+++ b/GolfingStats/GolfingStats/Pages/HomePage.xaml
@@ -4,8 +4,8 @@
              x:Class="GolfingStats.HomePage">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Courses" Clicked="NavCoursesPage" />
-        <ToolbarItem Text="New Round" Clicked="NavNewRoundPage" />
+        <ToolbarItem Text="Courses" Clicked="NavCoursesPage" Priority="-1"/>
+        <ToolbarItem Text="New Round" Clicked="NavNewRoundPage" Priority="1"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
@@ -13,7 +13,7 @@
             <Label x:Name="lblEmptyList" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" IsVisible="False" Text="No rounds played yet." />
 
             <!--Rounds played ListView-->
-            <ListView x:Name="lwRoundsPlayed" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand" 
+            <ListView x:Name="lwRoundsPlayed" HorizontalOptions="FillAndExpand" VerticalOptions="Start" 
                     ItemTapped="OnRoundTapped">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -21,6 +21,9 @@
                                  Detail="{Binding Date, StringFormat='Date played: {0:dd/MM/yyyy}'}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
+                <ListView.Footer>
+                    <Label />
+                </ListView.Footer>
             </ListView>
 
             <!--UI For testing and debugging-->
