--- a/GolfingStats/GolfingStats/Controls/ShotModalNavBar.xaml
+++ b/GolfingStats/GolfingStats/Controls/ShotModalNavBar.xaml
@@ -14,8 +14,8 @@
                 <On Platform="iOS">0,30,0,0</On>
             </OnPlatform>
         </StackLayout.Margin>
-        <Label x:Name="lblHoleNumber" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Margin="15, 0" TextColor="White" FontSize="Medium" FontAttributes="Bold" />
+        <Label x:Name="lblHoleNumber" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" TextColor="White" FontSize="Medium" FontAttributes="Bold" />
         <!--TODO:Add facing arrow to close modal-->
-        <Button x:Name="btnCloseModal" HorizontalOptions="End" VerticalOptions="CenterAndExpand" Margin="20,0" BackgroundColor="SeaGreen" TextColor="White" FontSize="Medium" Text="&lt;" />
+        <Button x:Name="btnCloseModal" HorizontalOptions="End" VerticalOptions="CenterAndExpand" Margin="20,0,0,0" BackgroundColor="SeaGreen" TextColor="White" FontSize="Medium" Text="&lt;" />
     </StackLayout>
 </StackLayout>
