Small Ui changes. Last commit before page naming changes

--- a/GolfingStats/GolfingStats/Pages/AddHolesPage.xaml
+++ b/GolfingStats/GolfingStats/Pages/AddHolesPage.xaml
@@ -7,7 +7,7 @@
             <ContentPage>
                 
                 <ContentPage.Content>
-                    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="5">
 
                         <!--HoleNumber-->
                         <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
