--- a/GolfingStats/GolfingStats.iOS/Resources/LaunchScreen.storyboard
+++ b/GolfingStats/GolfingStats.iOS/Resources/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="X5k-f2-b5h" launchScreen="YES">
-    <device id="retina5_9" orientation="portrait">
+    <device id="ipad12_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,22 +17,21 @@
                         <viewControllerLayoutGuide type="bottom" id="9ZL-r4-8FZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleAspectFill" id="yd7-JS-zBw">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" heightSizable="YES" widthSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="266" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="SplashFlag.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                                <autoresizingMask key="autoresizingMask" heightSizable="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="266" translatesAutoresizingMaskIntoConstraints="NO" image="SplashFlag.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" fixedFrame="YES">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                                 <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
+                                <autoresizingMask key="autoresizingMask" heightSizable="YES" widthSizable="YES" flexibleMinX="YES" flexibleMinY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="bottomRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="928" translatesAutoresizingMaskIntoConstraints="NO" image="Icon-76.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES">
-                                <rect key="frame" x="287" y="720" width="72" height="72"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="928" translatesAutoresizingMaskIntoConstraints="NO" image="Icon-76.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" insetsLayoutMarginsFromSafeArea="NO">
+                                <rect key="frame" x="936" y="1274" width="72" height="72"/>
                                 <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                                 <constraints>
-                                    <constraint id="932" firstAttribute="width" constant="72"/>
-                                    <constraint id="933" firstAttribute="height" constant="72"/>
+                                    <constraint id="990" firstItem="928" firstAttribute="height" constant="72"/>
+                                    <constraint id="991" firstItem="928" firstAttribute="width" constant="72"/>
                                 </constraints>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -46,6 +45,10 @@
                                 <include reference="266"/>
                             </mask>
                         </variation>
+                        <constraints>
+                            <constraint id="994" firstItem="yd7-JS-zBw" firstAttribute="bottom" secondItem="928" secondAttribute="bottom" constant="20"/>
+                            <constraint id="995" firstItem="yd7-JS-zBw" firstAttribute="trailing" secondItem="928" secondAttribute="trailing" constant="16"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XAI-xm-WK6" userLabel="First Responder" sceneMemberID="firstResponder"/>
